--- a/environment.yml
+++ b/environment.yml
@@ -9,11 +9,12 @@ dependencies:
   - r-tidyverse=1.3.2
   - r-data.table=1.14.8
   - r-here=1.0.1
-  - r-sf=1.0_7
   - r-igraph=1.4.1
   - r-microbenchmark=1.4.9
   - r-tinytex=0.44
   - r-bookdown=0.33
+  - r-sf
+  - r-rcpp
   - wget=1.20.3
   - unzip=6.0
   - snakemake=7.24.2
