--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - base
   - R
 dependencies:
-  - r-base
+  - r-base=4.2.3
   - r-tidyverse=1.3.2
   - r-data.table=1.14.8
   - r-here=1.0.1
@@ -13,9 +13,7 @@ dependencies:
   - r-microbenchmark=1.4.9
   - r-tinytex=0.44
   - r-bookdown=0.33
-  - r-s2
-  - r-units
-  - r-classint
+  - r-sf=1.0_7
   - wget=1.20.3
   - unzip=6.0
   - snakemake=7.24.2
