--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,17 @@
-name: snakemake
+name: analysis
 channels:
+  - base
+  - bioconda
   - conda-forge
   - bioconda
 dependencies:
   - snakemake=7.24.2
-  - singularity=3.8.6
+  - r-base=4.2.3
+  - r-tidyverse=1.3.2
+  - r-data.table=1.14.8
+  - r-here=1.0.1
+  - r-igraph=1.4.1
+  - r-microbenchmark=1.4.9
+  - r-tinytex=0.44
+  - r-bookdown=0.33
+  - r-sf=1.0_7
